--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.7.2
+Date: 2025-09-21
+  Changes:
+    - improved generation rate and copper drop from copper stromatolite
+---------------------------------------------------------------------------------------------------
 Version: 0.7.1
 Date: 2025-09-21
   Changes:
