--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,15 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.7.10
+Date: 2025-09-25
+  Changes:
+    - moved wooden platform tips and tricks unlock from deep sea oil extraction tech to coconut processing to make it easier get early on
+    - changed recipe type for diggable ground from advanced crafting to "organic-or-assembling". It can now be crafted by hand, assembler or with biochamber
+    - increased ethanol crafting time (6 -> 10)
+    - reduced coconut oil crafting time (10 -> 6)
+    - reduced wooden platform crafting cost (10 sealant-> 5 sealant)
+    - all pelagos recipes now have 4 tint colors. They are compatible with mods like collored_biochambers
+    - colorful_biochamber added to optional dependencies
+---------------------------------------------------------------------------------------------------
 Version: 0.7.9
 Date: 2025-09-23
   Changes:
