--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,15 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.9.0
+Date: 2025-09-26
+  Changes:
+    - coconut oil now require 10 coconut meat instead of 15
+    - sand on pelagos now absorbs small ammount of pollution
+    - water on pelagos now absorbs tiny ammount of pollution
+    - updated locale for copper biter
+    - updated copper biter color
+    - added physical resistances to copper biter
+    - added poisonus firearm magazine
+---------------------------------------------------------------------------------------------------
 Version: 0.8.1
 Date: 2025-09-25
   Changes:
