--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.9.2
+Date: 2025-09-26
+  Changes:
+    - fuel_top_speed_multiplier now applies correctly to every fuel 
+---------------------------------------------------------------------------------------------------
 Version: 0.9.1
 Date: 2025-09-26
   Changes:
