--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,12 @@
 Version: 0.9.3
 Date: 2025-09-27
   Changes:
+    - creating nuke explosion now creates deep water
+
+---------------------------------------------------------------------------------------------------
+Version: 0.9.3
+Date: 2025-09-27
+  Changes:
     - added 1 module slot to diesel assembling machine
     - changed crafting speed of diesel assembling machine from 1 to 1.25
 ---------------------------------------------------------------------------------------------------
