--- a/changelog.txt
+++ b/changelog.txt
@@ -1,10 +1,15 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.12.1
-Date: 2025-10-01
+Date: 2025-10-02
   Changes:
-    - added heavy machine gun
+    - added heavy gun turret and it's recipe
     - increased leviathan copper spitter size by 25%
     - increased leviathan copper spitter dmg by 50%
+    - introduced corrosive dmg type
+    - added corrosive dmg resistances for demolishers
+    - added corrosive dmg resistances for hudge asteroids
+    - renamed poisonous ammo into corrosive ammo
+    - increased corrosive magazine dmg (5 -> 7)
 ---------------------------------------------------------------------------------------------------
 Version: 0.12.1
 Date: 2025-10-01
