diesel-agricultural-tower

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.14.0
+Date: 2025-10-03
+  Changes:
+    - cargo ship boat placed on waterway now has diesel engine not burner.
+    - added diesel agricultural tower
+    - any planet start: moved agricultural tower research back to gleba
+---------------------------------------------------------------------------------------------------
 Version: 0.13.2
 Date: 2025-10-03
   Changes:
