--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,18 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.14.3
+Date: 2025-10-05
+  Changes:
+    - fixed locale for Activated carbon item
+  Balancing:
+    - fermented fish spoiling time is now longer (1h -> 2h)
+    - copper spitter egg spoiling time is now longer (0.5h -> 1.0h)
+    - coconutrients now give more nutrients (8 -> 10)
+---------------------------------------------------------------------------------------------------
 Version: 0.14.2
 Date: 2025-10-05
   Changes:
-    - reduced mining time of wooden platform (0.5 -> 0.2)
-    - fix: forcebuild on pelagos deepsea, now works and will default to wooden platform
+    - reduced wooden platform mining time (0.5 -> 0.2)
+    - fix: forcebuild on pelagos deepsea now works and will default to wooden platform
 ---------------------------------------------------------------------------------------------------
 Version: 0.14.1
 Date: 2025-10-04
