--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.16.3
+Date: 2025-10-12
+  Changes:
+    - fix: tile migration run only on pelagos surface
+---------------------------------------------------------------------------------------------------
 Version: 0.16.2
 Date: 2025-10-12
   Changes:
