rocket silo pollution

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.16.4
+Date: 2025-10-12
+  Balancing:
+    - rocket silo now generate much less electromagnetic waves
+---------------------------------------------------------------------------------------------------
 Version: 0.16.3
 Date: 2025-10-12
   Changes:
