--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.17.1
+Date: 2025-10-16
+  Changes:
+    - fixed bug that made it impossible to see changelog in game
+    - fixed bug that gives you regular thruster after decontructing ethanol one
+---------------------------------------------------------------------------------------------------
 Version: 0.17.0
 Date: 2025-10-14
   Changes:
@@ -197,10 +203,6 @@ Date: 2025-09-29
     - any planet start: added Pelagos military science pack
     - engine casting recipe is now 50% quicker
     - pelagos pollution type now works with accumulators, fusion generator, and solar power
----------------------------------------------------------------------------------------------------
-Version: 0.11.3
-Date: 2025-09-29
-  Changes:
     - long range delivery drone request depot can now be placed on wooden platform
     - fixed bug that not allowed placement of cargo ships next to wooden platform
 ---------------------------------------------------------------------------------------------------
@@ -266,10 +268,6 @@ Date: 2025-09-26
     - changed locale for technology "Deep sea oil extraction" is now "Deep sea extraction"
     - changed locale for technology description of "Deep sea extraction"
     - reduced generation and consumption of electricity by oil rig by 100kW
----------------------------------------------------------------------------------------------------
-Version: 0.9.2
-Date: 2025-09-26
-  Changes:
     - fuel_top_speed_multiplier now applies correctly to every fuel 
 ---------------------------------------------------------------------------------------------------
 Version: 0.9.1
@@ -422,155 +420,3 @@ Date: 2025-09-14
     - added hard dependency on Long_Range_Delivery_Drones
     - changed technology and recipes related with Long_Range_Delivery_Drones to include them in pelagos tech tree
     - fixed planet icon scale so it works properly with telescopic planet discovery
----------------------------------------------------------------------------------------------------
-Version: 0.5.3
-Date: 2025-09-10
-  Changes:
-    - added engine unit casting recipe and technology
-    - added circuit network machines and radar to list of items that can be placed on wooden platform
-    - reduced floating electric pole cost (20 electric pole -> 2 electric pole)
----------------------------------------------------------------------------------------------------
-Version: 0.5.2
-Date: 2025-09-09
-  Changes:
-    - incresed oil rig tank capacity to match tanker (100k -> 150k)
----------------------------------------------------------------------------------------------------
-Version: 0.5.1
-Date: 2025-09-09
-  Changes:
-    - added wooden platform to landfill productivity
-    - changed recipe category for Ethanol processing unit from "crafting-with-fluid" to "electronics-with-fluid" so it now can be produced using Electromagnetic Plant
----------------------------------------------------------------------------------------------------
-Version: 0.5.0
-Date: 2025-09-09
-  Changes:
-    - added wooden platform
-    - added tips and tricks for wooden platform
-    - added barreling machine
-    - fermentation bacteria recipe is not present in assembling machines anymore
-    - fixed locale for cellulose decomposition
-    - fixed wrong cost of rocket on pelagos (now rocket will cost 10x LESS of LDS and Blue Circuits)
-    - fermentation-bacteria methane cost incresed 30 -> 150
-    - increased ethanol fermentation-bacteria cost 3 -> 5
-    - reduced ammount of mined methane 5x (10 -> 2)
-    - increased oil rig power pole supply range 4.5 -> 7.5
----------------------------------------------------------------------------------------------------
-Version: 0.4.1
-Date: 2025-09-07
-  Changes:
-    - increased excavator mining speed 0.5 -> 1.5
-    - increased excavator module slots 5 -> 6
-    - increased excavator power draw "180kW" -> "540kW"
-    - excavator now require 5 engine units instead of 5 electronic circuit
-    - reduced fuel slots 3 -> 2.
-    - incresed diesel drill mining speed 0.5 -> 1.5
-    - added missing locale for Galleon cannon
----------------------------------------------------------------------------------------------------
-Version: 0.4.0
-Date: 2025-09-06
-  Changes:
-    - updated diesel assembler sprite.
-    - all ships from the cargo-ships mod now have diesel engines. They consume barrels filled with fuel (fluids that have fuel value) instead of solid fuel like coal. Barrels are reusable.
-    - excavator is now powered by a diesel engine, similar to the one on ships.
-    - removed pelagos rocket fuel recipe. It is no longer needed on the planet.
-    - rocket part now uses ethanol if a silo was created on pelagos surface.
-    - removed coconut oil recipes for express transport belt, express splitter, express underground belt, and electric engine.
-    - added new recipe: coconut lubricant.
-    - terrain generator should now favor bigger islands a bit more.
-    - terrain generator now generates +50% more coconut palms.
-    - added new hard dependency: "distant shores". Galleon and its cannonball are now part of the pelagos tech tree.
-    - increased energy needed in coconut husk and wood carbonization recipes.
-    - increased wood drop from coconut palm: 3 -> 5.
-    - fixed overlapping corundum path.
-    - fixed pelagos overlapping with corundum when the organized solar system mod is installed.
-    - reduced improvised landfill cost (20 stone + 100 spoilage) -> (20 stone + 80 spoilage)
----------------------------------------------------------------------------------------------------
-Version: 0.3.1
-Date: 2025-09-04
-  Changes:
-    - added spanish translation made by AnthonyDPS
----------------------------------------------------------------------------------------------------
-Version: 0.3.0
-Date: 2025-09-04
-  Changes:
-    - added diesel pump
-    - added diesel assembler
-    - moved diesel inserter into diesel automation technology
-    - fixed error that caused rocket fuel to be recycled based on pelagos recipe, so it was recycled into sealant instead of solid fuel
-    - reduced coconut husk stack size 50 -> 40
-    - reduced coconut meat stack size 100 -> 50
----------------------------------------------------------------------------------------------------
-Version: 0.2.2
-Date: 2025-09-02
-  Changes:
-    - updated calciner power demand 4MW -> 1MW to compensate liquid_fuel energy value changes in 0.2.0
----------------------------------------------------------------------------------------------------
-Version: 0.2.1
-Date: 2025-09-01
-  Changes:
-    - updated locale
----------------------------------------------------------------------------------------------------
-Version: 0.2.0
-Date: 2025-09-01
-  Changes:
-    - added diesel drill
-    - added diesel inserter
-    - rebalanced liquid_fuel fuel values based on vanilla solid fuel recipes. 
-      Example: 
-        1x solid fuel has 12MJ of energy
-        10x light oil = 1 solid fuel so 1 light oil is 1.2MJ
-        20x heavy oil = 1 solid fuel so 1 heavy oil is 0.6MJ
-    - changed absurd cargo ship storage size and tanker storage volume into something more reasonable. Also reduced storage of boat a little bit. 
-    - boat storage, cargo ship storage size and tanker storage volume is now configurable in settings. Old value will remain until reseted to new defaults in settings
-    - added setting to force small electric generator on oil rig by default to avoid error when running game
-    - lifting train bridge is now hidden in factoriopedia. 
----------------------------------------------------------------------------------------------------
-Version: 0.1.3
-Date: 2025-08-29
-  Changes:
-    - added compatibility for "AAI Vechicles:Ironclad" and "Ironclad gunboat and mortar turret"
----------------------------------------------------------------------------------------------------
-Version: 0.1.2
-Date: 2025-08-29
-  Changes:
-    - forces autoplace setting for palms to be "sand-1" to make sure biomes mods won't override this by accident (fixes compatibility issues with alien biomes)
----------------------------------------------------------------------------------------------------
-Version: 0.1.0
-Date: 2025-08-28
-  Changes:
-    - added new resource activated carbon to tie calciner stronger with planet progression
-    - added new recipe for steel that utilizes active carbon
-    - added tips and tricks for Excavator
-    - updated tech tree.
-    - reduced island sizes
-    - reduced wood from harvesting coconut palms 4 -> 3
-    - reduced solar power and moved pelagos to the same orbit as gleba
-    - reduced propability to get coconut seed 
----------------------------------------------------------------------------------------------------
-Version: 0.0.4
-Date: 2025-08-27
-  Changes:
-    - added fuel_value property to petroleum,light oil,heavy oil and crude oil so it will be present even without maraxis installed
-    - added fuel_value property to puff-gas for compatibility with boompuff agriculture (puff gas can now be used as calciner fuel)
-    - added Pelagos briefing with simulation to factoriopedia
-    - added Coconut processing entry to factoriopedia
-    - added Calciner entry to factoriopedia
-    - removed ethanol temperature property 
----------------------------------------------------------------------------------------------------
-Version: 0.0.3
-Date: 2025-08-26
-  Changes:
-    - added planet and mod description
----------------------------------------------------------------------------------------------------
-Version: 0.0.2
-Date: 2025-08-26
-  Features:
-    - Added missing optional dependencies and fixed existing one
-    - Updated trigger science for fermentation bacteria to require building oil rig 
----------------------------------------------------------------------------------------------------
-Version: 0.0.1
-Date: 2025-08-26
-  Changes:
-    - Release
-
-
