--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.17.3
+Date: 2025-10-16
+  Balancing:
+    - long range delivery drones weight changed. Now you can pack only 1 on rocket (reverts change made in 0.17.2)
+---------------------------------------------------------------------------------------------------
 Version: 0.17.2
 Date: 2025-10-16
   Changes:
