--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,12 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.18.1
+Date: 2025-10-23
+  Changes:
+    - improved lighthouse performance
+    - added bztitanium compatibility
+---------------------------------------------------------------------------------------------------
 Version: 0.18.0
-Date: 2025-10-22
+Date: 2025-10-23
   Changes:
     - added lighthouse - pelagos liquid fuel radar for discovering new lands
     - graphics: calciner now has proper unique remnants
