fix composite entities

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.19.1
+Date: 2025-10-25
+  Changes:
+    - fix: composite entities should built properly on space stations
+---------------------------------------------------------------------------------------------------
 Version: 0.19.0
 Date: 2025-10-25
   Changes:
